Fixed z-index issue

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,6 +5,7 @@
     width: 100vw;
     height: 80px;
     background-color: #f2d404;
+    z-index: 50;
 }
 
 .navbar-navigation {
